--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Jellyfin"
         android:usesCleartextTraffic="true"
+        android:debuggable="true"
         android:networkSecurityConfig="@xml/network_security_config">
 
         <!-- Legacy service required for AccountManagerMigration -->
